[package]
name = "wormhole-gui"
version = "0.1.0"
description = "Magic Wormhole GUI"
authors = ["you"]
license = ""
repository = ""
default-run = "wormhole-gui"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["clipboard-read-text", "clipboard-write-text", "dialog-open", "shell-open"] }
magic-wormhole = "0.6.0"
futures = "0.3.28"
color-eyre = "0.6.2"
ctrlc = "3.2.5"
async-std = "1.12.0"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
